gke/gke-internal-services/istio/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: default
spec:
  ports:
  - name: http-hello
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello
