gke/gke-internal-services/istio/istio-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - hello
  http:
  - match:
    - uri:
        exact: /v1
    route:
    - destination:
        host: hello
        subset: v1
  - match:
    - uri:
        exact: /v2
    route:
    - destination:
        host: hello
        subset: v2
  - route:
    - destination:
        host: hello
        subset: v2
